--- a/server/public/index.html
+++ b/server/public/index.html
@@ -160,16 +160,20 @@
 				<h1>
 					GPS Tracker
 				</h1>
-				<a href="#settingsDialog" data-role="button" data-rel="dialog" data-icon="gear" class="ui-btn-right">
-					Settings </a>
+				<!--<a href="#settingsDialog" data-role="button" data-rel="dialog" data-icon="gear" class="ui-btn-right">
+					Settings </a>-->
 			</header>
 			<div class="content" data-role="content">
 				<div class="ui-grid-a">
 					<div class="ui-block-a">
-						<a href="#statusPage" data-role="button" data-transition="flip">Status</a>
+						<a href="#statusPage" data-role="button" data-transition="flip" data-icon="grid">
+							Status
+						</a>
 					</div>
 					<div class="ui-block-b">
-						<a href="#graphs" data-role="button">Graphs</a>
+						<a href="#graphs" data-role="button" data-icon="search">
+							Graphs
+						</a>
 					</div>
 				</div>
 				<div class="ui-grid-b">
@@ -180,7 +184,7 @@
 					</div>
 					<div class="ui-block-b">
 						<a id="toggleTracking" href="#" data-role="button" data-theme="e">
-							Start/Stop
+							Track!
 						</a>
 					</div>
 					<div class="ui-block-c">
